--- a/action.yml
+++ b/action.yml
@@ -1,27 +1,27 @@
-name "Run Elasticsearch"
-description: "This action spins up an Elasticsearch instance that can be accessed and used in your subsequent steps."
-author: "sukesuke"
+name: 'Run Elasticsearch'
+description: 'This action spins up an Elasticsearch instance that can be accessed and used in your subsequent steps.'
+author: 'igaiga'
 
 branding:
-  icon: "database"
-  color: "green"
+  icon: 'database'
+  color: 'green'
 
 inputs:
   stack-version:
-    description: "The version of the Elastic Stack you want to run"
+    description: 'The version of the Elastic Stack you want to run'
     required: true
   nodes:
-    description: "Number of nodes in the cluster"
+    description: 'Number of nodes in the cluster'
     required: false
     default: 1
   plugins:
-    description: "Elasticsearch plugin strings"
+    description: 'Elasticsearch plugin strings'
     required: false
-    default: ""
+    default: ''
 
 runs:
-  using: "docker"
-  image: "Dockerfile"
+  using: 'docker'
+  image: 'Dockerfile'
   env:
     STACK_VERSION: ${{ inputs.stack-version }}
     NODES: ${{ inputs.nodes }}
